# clickhouse-query-tool-starter

./: .gitignore  README.md  app.py  config.toml.example  pyproject.toml  requirements.txt
modules/: __init__.py  config.py  database.py  formatter.py  query.py
static/: app.js  style.css
templates/: index.html
