[project]
name = "clickhouse-starter"
version = "0.1.0"
description = "ClickHouse data extraction tool with CLI and Web interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.15.1",
    "pandas>=3.0.2",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
    "tomlkit>=0.12.0",
    "pyarrow>=14.0.0",
]
